# tuxrun

./: .gitlab-ci.yml  Dockerfile.ci-archlinux  Dockerfile.ci-debian  Dockerfile.ci-fedora  Dockerfile.tuxrun-dispatcher  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  tuxrun.PKGBUILD  tuxrun.spec
.github/workflows/: ci.yml
debian/: changelog  control  tuxrun.bash-completion
docs/: install-arch.md  install-deb.md  run-fvp.md
share/fvp/: Makefile
test/: integration.py
test/unit/: test_argparse.py  test_main.py  test_runtime.py  test_writer.py
test/unit/refs/definitions/: fvp-aemva-defaults.yaml  fvp-aemva-kernel-xz.yaml  fvp-aemva-ltp-smoke.yaml  fvp-aemva-modules-path-usr.yaml  fvp-aemva-modules-tar-gz.yaml  fvp-aemva-modules.yaml  fvp-aemva-prompt.yaml  fvp-aemva.yaml  qemu-arm64-arch-customization.yaml  qemu-arm64-hacking-session.yaml  qemu-arm64-kselftest-arm64.yaml  qemu-arm64-ltp-fcntl-locktests.yaml  qemu-arm64-ltp-syscalls-kirk.yaml  qemu-arm64-mmtests-db-sqlite-insert-small.yaml  qemu-arm64-mmtests-hpc-scimarkc-small.yaml  qemu-arm64-mmtests-io-blogbench.yaml  qemu-arm64-mmtests-io-fio-randread-async-randwrite.yaml  qemu-arm64-mmtests-io-fio-randread-async-seqwrite.yaml  qemu-arm64-mmtests-memdb-redis-memtier-small.yaml  (+99 more)
tuxrun/: __init__.py  __main__.py  argparse.py  results.py  runtimes.py  utils.py
tuxrun/devices/: fvp.py
tuxrun/templates/: __init__.py
tuxrun/templates/dispatchers/: dispatcher.yaml.jinja2
tuxrun/templates/jobs/: qemu.yaml.jinja2
tuxrun/templates/wrappers/: docker.jinja2
tuxrun/tests/: kselftest.py
