[build-system]
requires = ["flit_core >=3.2,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "tuxrun"
authors = [
    {name = "Antonio Terceiro"},
]
maintainers = [
    {name = "Anders Roxell", email = "anders.roxell@linaro.org"},
    {name = "Ben Copeland", email = "ben.copeland@linaro.org"},
]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = [
    "argcomplete",
    "jinja2",
    "requests",
    "PyYAML",
    "ruamel.yaml",
    "tuxlava",
]

[project.urls]
Homepage = "https://tuxrun.org/"

[project.scripts]
tuxrun = "tuxrun.__main__:main"

[tool.flit.sdist]
include = ["test/"]
